test/sema/variable-redefinition.delta.output
variable-redefinition.delta:6:9: error: redefinition of 'foo'
    var foo = 2;
        ^
