test/sema/variable-redefinition.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    var foo = 1;
    // CHECK: [[@LINE+1]]:9: error: redefinition of 'foo'
    var foo = 2;
}
